--- a/static/styles.css
+++ b/static/styles.css
@@ -8,8 +8,9 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: "Lato", sans-serif;
 }
 
-h1 {
-	font-size: 2.5em;
+header > h1 {
+	font-size: 4em;
+	font-weight: 800;
 	text-align: center;
 }
 
@@ -53,21 +54,34 @@ li {
 	content: "";
 }
 
-header,
-article,
-section.cover-page {
-	margin: 2em auto;
-	break-after: page;
-	counter-increment: page;
-}
 
 @media print {
+	@page {
+		size: Letter portrait;
+	}
+
+	body {
+		max-width: 100%;
+	}
+
+	header,
+	article,
+	section.cover-page {
+		break-after: page;
+		counter-increment: page;
+	}
+
+	article * {
+		break-before: avoid;
+		break-after: avoid;
+	}
+
 	section.cover-page > h1:first-child,
 	section.cover-page > h2:first-child,
 	section.cover-page > h3:first-child {
 		width: 100%;
 		height: 100vh;
-		font-size: 2em;
+		font-size: 3em;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
@@ -84,11 +98,10 @@ section.cover-page {
 
 pre {
 	background: none;
-	border-left: 2px solid #ccc;
 }
 
-pre code,
-pre code.hljs {
+pre code {
 	padding: 0;
 	background: none;
+	white-space: pre-wrap;
 }
